# note-test

./: .gitignore  Cargo.toml
src/: basic_cursor_controller.rs  basic_line_controller.rs  colour_holder.rs  cursor_controller.rs  lines_controller.rs  main.rs  reader.rs  renderer.rs  state_controller.rs  states.rs  supabase.rs  traits.rs
