[package]
name = "notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.0.2", features = ["full"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
exitfailure = "0.5.1"
clap = { version = "4.1.1", features = ["derive"] }
dotenv = "0.15.0"